--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,34 @@
 HEAD:
-  mixed-port: 10802
+  mixed-port: 7890
   allow-lan: true
-  mode: Rule
-  log-level: debug
-  external-controller: 0.0.0.0:9093
-  external-controller-tls: 0.0.0.0:9443
-  external-ui: ui
-  diversion:
-  enable: true
+  mode: rule
+  log-level: info
+  external-controller: :9090
+  dns:
+    enable: true
+    listen: 0.0.0.0:1053
+    default-nameserver:
+    - 223.5.5.5
+    - 8.8.8.8
+    - 1.1.1.1
+    nameserver-policy:
+      geosite:gfw,geolocation-!cn:
+      - https://1.1.1.1/dns-query
+      - https://1.0.0.1/dns-query
+      - https://8.8.8.8/dns-query
+    nameserver:
+    - https://223.5.5.5/dns-query
+    - https://1.12.12.12/dns-query
+    - https://8.8.8.8/dns-query
+    fallback:
+    - https://1.1.1.1/dns-query
+    - https://8.8.8.8/dns-query
+    fallback-filter:
+      geoip: false
+      geoip-code: CN
+      ipcidr:
+      - 240.0.0.0/4
+    fake-ip-filter:
+    - +.lan
+    - +.microsoft*.com
+    - localhost.ptlogin2.qq.com
